--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-maps",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Node-RED Maps node",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +8,8 @@
   "keywords": [
     "node-red",
     "openlayers",
-    "map"
+    "map",
+    "IoT"
   ],
   "author": "Miguel Salinas",
   "license": "Apache License, Version 2.0",
